css/style.css
@font-face {
  font-family: 'Roboto';
  src: url('../fonts/Roboto-Black.ttf');
  src: url('../fonts/Roboto-Bold.ttf');
  src: url('../fonts/Roboto-Medium.ttf');
  src: url('../fonts/Roboto-Regular.ttf');
  src: url('../fonts/Roboto-Thin.ttf');
  src: url('../fonts/Roboto-Light.ttf');
}

:root {
  --red: #ff3d00;
  --strongBlue: #049dbf;
  --pink: #f783ac;
  --blue: #0fbcf9;
  --orange: #f05033;
  --yellow: #f9e53b;
  --black: #000;
  --white: #fff;
  --grey: #787979;
}

html {
  scroll-behavior: smooth;
}

body {
  margin: 0;
  background: rgb(24, 29, 30);
  background-size: cover;
  background: url(../assets/bg1.png), rgba(24, 29, 30, 1);
  font-family: 'Roboto', sans-serif;
}

*,
*::after,
*::before {
  box-sizing: border-box;
}

.no-pointer {
  pointer-events: none;
}

.pointer {
  pointer-events: auto;
}

.no-show {
  display: none !important;
}

.no-margin {
  margin: 0;
}

/* menu */
nav {
  position: fixed;
  right: 0;
  height: 100vh;
  display: flex;
  align-items: center;
}

.menu {
  list-style: none;
  padding: 0;
}

.menu__item {
  padding: 10px 0;
  text-align: right;
  font-size: 20px;
}

.menu__item a {
  text-decoration: none;
  color: var(--grey);
  cursor: pointer;
}

.menu__item a:hover,
.menu__item a:focus {
  color: var(--white);
}

.menu__item a:hover .menu__item-marker,
.menu__item a:hover .menu__item-marker::after {
  background-color: var(--white);
}

.menu__item--active a {
  color: var(--white);
}

.menu__item--active .menu__item-marker,
.menu__item--active .menu__item-marker::after {
  background-color: var(--white);
}

.menu__item-marker {
  display: inline-block;
  height: 12px;
  width: 12px;
  background-color: var(--grey);
  border-radius: 50%;
  margin: 0 10px;
}

.menu__item-marker::after {
  content: '';
  display: block;
  width: 1px;
  height: 20px;
  background-color: var(--grey);
  transform: translateX(6px) translateY(18px);
}

.btnmenu {
  display: none;
  position: fixed;
  left: 10px;
  top: 10px;
  background: none;
  border: none;
}

.btnmenu__square {
  display: block;
  width: 40px;
  height: 5px;
  background-color: var(--white);
  margin-top: 3px;
}

.btnmenu__square--1 {
}

.btnmenu__square--2 {
}

.btnmenu__square--3 {
}

/* menu responsive */
.menu-responsive {
  position: fixed;
  left: 0;
  top: 0;
  padding: 0;
  display: none;
}

/* Main */
main {
  padding: 50px 0;
  width: 100%;
  height: 100vh;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.main__logo {
  width: 170px;
}

.main__name {
  font-size: 60px;
  color: var(--white);
  margin: 0;
  font-weight: bold;
}

.main__nickname {
  font-size: 30px;
  color: var(--blue);
  margin: 0;
}

.main__line {
  width: 100px;
  border: 1px solid var(--grey);
}

.main__ocupation {
  font-size: 20px;
  font-weight: lighter;
  color: var(--white);
  margin: 0;
}

.main__description {
  font-size: 18px;
  color: var(--white);
  margin: 15px 25%;
  text-align: justify;
}

.icons {
  font-size: 40px;
  width: 300px;
  display: flex;
  justify-content: space-between;
}

.icons__html {
  color: var(--red);
}

.icons__css {
  color: var(--strongBlue);
}

.icons__js {
  color: var(--yellow);
}

.icons__react {
  color: var(--blue);
}

.icons__sass {
  color: var(--pink);
}

.icons__git {
  color: var(--orange);
}

/* Projects */
.projects {
  height: 100vh;
  display: flex;
  flex-direction: column;
}

.projects__title {
  text-align: end;
  margin-right: 50px;
  font-size: 60px;
  color: var(--white);
}

.projects__list {
  width: 90%;
  display: flex;
  flex-wrap: wrap;
  margin: auto 0;
  list-style: none;
  justify-content: space-evenly;
  color: var(--white);
}

.projects__item {
  width: 200px;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: space-between;
  background-color: #252c35;
  padding: 20px;
  border-radius: 5px;
  box-shadow: -1px 3px 5px 0px rgba(0, 0, 0, 0.75);
  overflow: hidden;
}

.project__picture {
  object-fit: contain;
  margin: 10px 0;
  width: 100%;
  height: 220px;
}

.project__commingsoon {
  background-color: rgba(62, 62, 62, 0.76);
  position: absolute;
  width: 100%;
  height: 100%;
  top: 0;
  display: flex;
  justify-content: center;
  align-items: center;
}

.project_commingsoon__text {
  font-size: 25px;
  background: -webkit-linear-gradient(var(--red), var(--yellow));
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
}

.project__information {
  background-color: rgba(62, 62, 62, 0.76);
  position: absolute;
  width: 100%;
  height: 100%;
  top: 0;
  transform: translateY(100%);
  transition: 300ms;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  text-align: justify;
  padding: 10px;
}

.projects__item:hover > .project__information {
  transform: translateY(0);
}

.project__title--dailifity {
  color: #ba5eee;
}

.project__description {
  margin: 10px 0;
}

.project__btn {
  border: none;
  border-radius: 5px;
  padding: 5px;
  cursor: pointer;
  background: linear-gradient(
    160deg,
    #ba5eee,
    #8f67e7,
    #656bda,
    #3e6ac8,
    #3f5aa9
  );
}

/* Contact */
.contact {
  height: 100vh;
  display: flex;
  flex-direction: column;
}

.contact__title {
  text-align: end;
  margin-right: 50px;
  font-size: 60px;
  color: var(--white);
}

.contact__container {
  width: 75%;
  height: 60vh;
  margin: auto;
  padding: 100px 0;
  background-image: url(../assets/bgform.png);
  background-size: 100% 100%;
  background-repeat: no-repeat;
  text-align: center;
}

.contact__icon {
  color: var(--white);
  font-size: 80px;
  transition: 300ms;
}

.contact__icon:hover,
.contact__icon:focus {
  font-size: 100px;
}

.contact__iconlist {
  list-style: none;
  padding: 0;
  width: 80%;
  margin-left: 10%;
  display: flex;
  justify-content: space-evenly;
}

.contact__text {
  font-size: 25px;
  color: var(--white);
}

.contact__email {
  text-decoration: none;
  color: var(--yellow);
}

/* Shapes */
.shapes {
  position: absolute;
  width: 100%;
  height: 100%;
  z-index: -1;
}

/* MEDIA QUERYS */
/* Extra small */
@media screen and (max-width: 576px) {
  .main__description {
    margin: 20px 10%;
  }
  .main__name {
    font-size: 50px;
  }
  .btnmenu {
    display: block;
  }
  .menu-responsive {
    display: none;
  }
  .menu {
    display: none;
  }
  .projects__item {
    margin: 20px 0;
  }
  .projects {
    height: auto;
  }
  .contact__container {
    background-size: 100% 100%;
    height: 35vh;
    padding: 50px 20px;
  }
  .contact__icon {
    font-size: 40px;
  }
  .contact__text {
    font-size: 16px;
  }
  .contact__iconlist {
    width: 100%;
    margin-left: 0;
  }
  .contact__icon:hover,
  .contact__icon:focus {
    font-size: 50px;
  }
}

/* small */
@media (min-width: 577px) and (max-width: 767px) {
}

/* Medium */
@media (min-width: 769px) and (max-width: 992px) {
}
/* Large */
@media (min-width: 993px) and (max-width: 1200px) {
}
/* Extra large */
@media (min-width: 1200px) {
}

/* Scroll */
body::-webkit-scrollbar {
  display: none;
}

